43: Start using Java 16 records